[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Entities/Scripts/Enemy_Static_Hurter.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 18.0278

[sub_resource type="CircleShape2D" id=2]
radius = 23.0217

[node name="Static_Hurter" type="StaticBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
hp_max = null

[node name="Cage" type="Polygon2D" parent="."]
color = Color( 0.807843, 0.807843, 0.807843, 1 )
polygon = PoolVector2Array( -6, -24, -7, -7, -24, -6, -24, 6, -7, 7, -6, 24, 6, 24, 7, 7, 24, 6, 24, -6, 7, -7, 6, -24 )

[node name="Heart" type="Polygon2D" parent="Cage"]
show_behind_parent = true
color = Color( 0.890196, 0.141176, 0.141176, 1 )
polygon = PoolVector2Array( -13, -13, 0, -14, 14, -13, 15, 0, 14, 13, 0, 14, -13, 13, -14, 0 )

[node name="CollisionsSahpe" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AttackBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
visible = false
shape = SubResource( 2 )

[connection signal="body_entered" from="AttackBox" to="." method="_on_AttackBox_body_entered"]
[connection signal="body_exited" from="AttackBox" to="." method="_on_AttackBox_body_exited"]
